syntax = "proto3";

option csharp_namespace = "Fuse8_ByteMinds.SummerSchool.PublicApi";

import "google/protobuf/timestamp.proto";

// The service definition.
service GrpcDocument {
  // Получить курс валюты по коду
  rpc GetLatestAsync (CurrencyRequest) returns (CurrencyResponse);

  // Получить курс валюты на дату актуальности
  rpc GetHistoricalAsync (CurrencyRequestWithDate) returns (CurrencyResponse);

  // Получить настройки приложения
  rpc GetSettingsAsync (SettingsRequest) returns (SettingsResponse);

  // Получить курс избранной валюты
  rpc GetLatestFavoriteCurrencyAsync (FavoriteCurrencyRequest) returns (FavoriteCurrencyResponse);

  // Получить курс избранной валюты на дату актуальности
  rpc GetHistoricalFavoriteCurrencyAsync (HistoricalFavoriteCurrencyRequest) returns (FavoriteCurrencyResponse);
}

// Запрос избранного кода валюты
message FavoriteCurrencyRequest {
    CurrencyCode currency = 1; //код валюты
    CurrencyCode baseCurrency = 2; //код базовой валюты
}

// Запрос избранного кода валюты на дату актуальности
message HistoricalFavoriteCurrencyRequest {
    CurrencyCode currency = 1; //код валюты
    CurrencyCode baseCurrency = 2; //код базовой валюты
    google.protobuf.Timestamp date = 3; //дата актуальности избранного курса валюты
}

//Ответ на запрос избранного кода валюты
message FavoriteCurrencyResponse {
    CurrencyCode currency = 1; //код валюты
    CurrencyCode baseCurrency = 2; //код базовой валюты
    float value = 3; //курс валюты
}

// Код валюты.
message CurrencyRequest {
  CurrencyCode currencyCode = 1; //код валюты
}

// Ответ на запрос валюты по коду.
message CurrencyResponse {
  CurrencyCode currencyCode = 1; //код валюты
  float value = 2; //курс валюты
}

// Код валюты на дату
message CurrencyRequestWithDate {
  CurrencyCode currencyCode = 1; //код валюты
  google.protobuf.Timestamp date = 2; //дата актуальности курса валюты
}

//метод не принимает параметры
message SettingsRequest{}

// ответ на запрос настроек приложения
message SettingsResponse {
    string baseCurrency = 1; //Базовая валюта, относительно которой считается курс
    bool remainingRequests = 2; //остались ли еще запросы
}

//код валюты
enum CurrencyCode
{
    USD = 0;
    RUB = 1;
    EUR = 2;
    BYN = 3;
}